# ft_irc

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  mainBot.cpp  showip.cpp  test.cpp
bot/: Bot.cpp  Bot.hpp  Channel.cpp  User.cpp
src/: Bot.cpp  Bot.hpp  Channel.cpp  Channel.hpp  Command.cpp  Command.hpp  Guest.cpp  Guest.hpp  Message.cpp  OtherServerMethods.cpp  PrivateMessageCommand.cpp  PrivateMessageCommand.hpp  Server.cpp  Server.hpp  User.cpp  User.hpp  UserCommand.cpp  UserCommand.hpp
